2748 - modus chip overlapping fix

--- a/stencil-workspace/src/components/modus-chip/modus-chip.scss
+++ b/stencil-workspace/src/components/modus-chip/modus-chip.scss
@@ -14,6 +14,7 @@
   justify-content: center;
   padding: $rem-2px $rem-4px;
   vertical-align: middle;
+  margin: 2px 0px;
 
   &.no-left-icon.no-right-icon {
     padding: $rem-2px $rem-16px;
